tests/dataset/job/compiler/c/q22.error
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c: In function ‘test_Q22_finds_western_violent_movie_with_low_rating’:
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:387:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  387 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:394:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  394 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:455:27: warning: implicit declaration of function ‘rows_item_list_t_create’ [-Wimplicit-function-declaration]
  455 |   rows_item_list_t tmp4 = rows_item_list_t_create(
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:456:19: error: ‘(company_name_t *)&company_name’ is a pointer; did you mean to use ‘->’?
  456 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                   ^
      |                   ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:456:41: error: ‘(movie_companie_t *)&movie_companies’ is a pointer; did you mean to use ‘->’?
  456 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:456:60: error: ‘(company_type_t *)&company_type’ is a pointer; did you mean to use ‘->’?
  456 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:456:72: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  456 |       company_name.len * movie_companies.len * company_type.len * title.len *
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:457:20: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  457 |       movie_keyword.len * keyword.len * movie_info.len * info_type.len *
      |                    ^
      |                    ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:457:34: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  457 |       movie_keyword.len * keyword.len * movie_info.len * info_type.len *
      |                                  ^
      |                                  ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:457:51: error: ‘(movie_info_t *)&movie_info’ is a pointer; did you mean to use ‘->’?
  457 |       movie_keyword.len * keyword.len * movie_info.len * info_type.len *
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:457:67: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  457 |       movie_keyword.len * keyword.len * movie_info.len * info_type.len *
      |                                                                   ^
      |                                                                   ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:458:21: error: ‘(movie_info_idx_t *)&movie_info_idx’ is a pointer; did you mean to use ‘->’?
  458 |       movie_info_idx.len * info_type.len * kind_type.len);
      |                     ^
      |                     ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:458:37: error: ‘(info_type_t *)&info_type’ is a pointer; did you mean to use ‘->’?
  458 |       movie_info_idx.len * info_type.len * kind_type.len);
      |                                     ^
      |                                     ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:458:53: error: ‘(kind_type_t *)&kind_type’ is a pointer; did you mean to use ‘->’?
  458 |       movie_info_idx.len * info_type.len * kind_type.len);
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:521:50: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  521 |                                contains_string(mc.note, "(USA)") == 0 &&
      |                                                ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:80:34: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:522:50: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  522 |                                contains_string(mc.note, "(200") &&
      |                                                ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:80:34: note: expected ‘char *’ but argument is of type ‘const char *’
   80 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:560:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  560 |   int tmp17 = int_create(rows.len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:564:10: error: request for member ‘data’ in something not a structure or union
  564 |     tmp17.data[tmp18] = r.company;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:567:8: error: request for member ‘len’ in something not a structure or union
  567 |   tmp17.len = tmp18;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:580:10: error: request for member ‘data’ in something not a structure or union
  580 |     tmp23.data[tmp24] = r.title;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:583:8: error: request for member ‘len’ in something not a structure or union
  583 |   tmp23.len = tmp24;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:584:64: error: incompatible type for argument 1 of ‘_min_string’
  584 |   result_t result[] = {(result_t){.movie_company = _min_string(tmp17),
      |                                                                ^~~~~
      |                                                                |
      |                                                                int
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:586:72: error: incompatible type for argument 1 of ‘_min_string’
  586 |                                   .western_violent_movie = _min_string(tmp23)}};
      |                                                                        ^~~~~
      |                                                                        |
      |                                                                        int
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:71:38: note: expected ‘list_string’ but argument is of type ‘int’
   71 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:596:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  596 |     _json_string(it.movie_company);
      |                  ~~^~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:85:32: note: expected ‘char *’ but argument is of type ‘const char *’
   85 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:604:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  604 |     _json_string(it.western_violent_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:85:32: note: expected ‘char *’ but argument is of type ‘const char *’
   85 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:608:65: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  608 |   test_Q22_finds_western_violent_movie_with_low_rating_result = result;
      |                                                                 ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:610:13: error: request for member ‘data’ in something not a structure or union
  610 |   free(tmp17.data);
      |             ^
/tmp/TestCCompiler_JOB_Goldenq22673836028/001/prog.c:612:13: error: request for member ‘data’ in something not a structure or union
  612 |   free(tmp23.data);
      |             ^
